# flycar_car

./: .gitignore  SR5E1E3_CHASSIS_DEBUG_GUIDE(1).md  orangepi_to_car.py  orangepi_to_car_test.py
car_launch/launch/: follow.launch.py
docs/: README.md  follow_fly_car_design.md  onboard_code_merge_record.md  wifi_lan_autostart.md
follower_pkg/: CMakeLists.txt  package.xml
follower_pkg/src/: follower_node.cpp  leader_pose_receiver.cpp
orangepi_to_car/: setup.py
orangepi_to_car.pkg/: README.md  package.xml
orangepi_to_car.pkg/car/: orangepi_to_carv2.py
orangepi_to_car.pkg/launch/: flycar_system.launch.py  orangepi_to_carv2.launch.py
scripts/: autostart_wifi.sh  stop_wifi.sh  wifi-autostart.service
src/follower_pkg/config/: follower_params.yaml
src/follower_pkg/launch/: follower.launch.py
src/follower_pkg/src/: diff_drive_controller.cpp  follower_node.cpp
src/orangepi_to_car/car/: orangepi_to_carv2.py
src/orangepi_to_car/launch/: orangepi_to_carv2.launch.py
wifi_ap_manager/: package.xml  setup.cfg  setup.py
wifi_ap_manager/launch/: open_ap.launch.py
wifi_ap_manager/scripts/: start_wifi.sh  stop_wifi.sh  wifi-ap.service  wifi_keepalive.sh
wifi_ap_manager/wifi_ap_manager/: ap_manager.py
